<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <RelativeLayout
        android:background="@color/home_color"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <ImageView
            android:id="@+id/person_detail_back"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back"/>
        <TextView
            android:layout_alignParentRight="true"
            android:text="确认"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:id="@+id/mywalot_zhuanqian"
            android:layout_marginTop="12dp"
            android:layout_marginRight="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <TextView
            android:paddingBottom="10dp"
            android:layout_centerInParent="true"
            android:text="个人资料"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:id="@+id/mywalot_qianbao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp">


        <RelativeLayout
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="77dp">
            <TextView
                android:layout_marginTop="20dp"
                android:textColor="#999999"
                android:textSize="16sp"
                android:text="@string/touixang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


            <ImageView
                android:id="@+id/person_detail_touxiang"
                android:layout_marginRight="13dp"
                android:layout_toLeftOf="@+id/person_go"
                android:src="@mipmap/ic_launcher"
                android:layout_width="53dp"
                android:layout_height="53dp" />

            <ImageView
                android:layout_marginTop="20dp"
                android:layout_alignParentRight="true"
                android:id="@+id/person_go"
                android:layout_width="9dp"
                android:layout_height="18dp"
                android:src="@mipmap/arrow_right"/>
        </RelativeLayout>
        <RelativeLayout
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="58dp">
            <TextView
                android:textColor="#999999"
                android:textSize="16sp"
                android:text="@string/yonghuiming"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


            <TextView
                android:textColor="#666666"
                android:textSize="16sp"
                android:layout_alignParentRight="true"
                android:id="@+id/person_name"
                android:text="@string/mingzi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RelativeLayout>
        <RelativeLayout
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="58dp">
            <TextView
                android:textColor="#999999"
                android:textSize="16sp"
                android:text="@string/sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


            <RadioGroup
                android:layout_alignParentRight="true"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/person_btn_nv"
                    android:checked="true"
                    android:layout_marginRight="24dp"
                    android:drawablePadding="13dp"
                    android:button="@drawable/radio_button_style"
                    android:textColor="#666666"
                    android:textSize="16sp"
                    android:text="女"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <RadioButton
                    android:id="@+id/person_btn_nan"
                    android:drawablePadding="13dp"
                    android:button="@drawable/radio_button_style"
                    android:textColor="#666666"
                    android:textSize="16sp"
                    android:text="男"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RadioGroup>

        </RelativeLayout>

        <RelativeLayout
            android:gravity="center_vertical"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="58dp">
            <TextView

                android:textColor="#999999"
                android:textSize="16sp"
                android:text="@string/age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


            <TextView
                android:textColor="#666666"
                android:textSize="16sp"
                android:layout_alignParentRight="true"
                android:id="@+id/person_age"
                android:text="18岁"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RelativeLayout>
        <RelativeLayout
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:textColor="#999999"
                android:textSize="16sp"
                android:text="@string/xingzuo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


            <TextView
                android:drawablePadding="7dp"
                android:textColor="#666666"
                android:textSize="16sp"
                android:drawableRight="@drawable/pull_down"
                android:layout_alignParentRight="true"
                android:id="@+id/person_xingzuo"
                android:text="狮子座"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RelativeLayout>

        <RelativeLayout
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:textColor="#999999"
                android:textSize="16sp"
                android:text="@string/diqu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


            <TextView
                android:textColor="#666666"
                android:textSize="16sp"
                android:drawableRight="@drawable/pull_down"
                android:layout_alignParentRight="true"
                android:id="@+id/person_zone"
                android:text="北京"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RelativeLayout>

        <RelativeLayout
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:textColor="#999"
                android:textSize="16sp"
                android:text="@string/jibie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


            <TextView
                android:textColor="#666"
                android:textSize="16sp"
                android:layout_alignParentRight="true"
                android:id="@+id/person_jibie"
                android:text="平民"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>
